Small fixed to title and back link

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Niklas Lindblad | Blog
+title: Niklas Lindblad
 header: Niklas Lindblad
 description: A blog about software engineering, tools and agile practices.
 url: ""
